tests/NormalTests/paczka1/fuzzy1/38943855.err
Error in line 5: oId2YftvtT S44 89,9
Error in line 3: wCE5v0GCxz A740 74,4
Error in line 9: oId2YftvtT A740 62,8
Error in line 12: LGUXcksYO S675 62,0
Error in line 10: wCE5v0GCxz S675 55,1
Error in line 11: oId2YftvtT S675 85,5
Error in line 20: oId2YftvtT A740 65,0
Error in line 23: LGUXcksYO S44 270,8
Error in line 26: LGUXcksYO A740 4,56
Error in line 22: oId2YftvtT A297 9,6
Error in line 24: S675 A740 21,0
Error in line 33: rYDCjenh S675 1X5,1
Error in line 37: wCE5v0GCxz A740 5,8
Error in line 39: wCE5v0GCxz A297 92,7
